# sql-ast-modification

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
asthash/: asthash.py
backend/: app.py
frontend/src/: ApiMethods.js  App.css  App.js  InputForm.js  ResultDisplay.js
tests/: test_asthash.py  test_backend.py
