[tool.poetry]
name = "sql-ast-modification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sql_ast_modification"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlglot = "^18.8.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
